# design-studio-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  DESIGN.md  Dockerfile  HANDOFF.md  PLAN.md  PRODUCT.md  PRO_PIPELINE_PLAN.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_auth.sql  0003_canonforge.sql  0004_drop_ui_artifacts.sql  0005_derivation.sql  0006_collections.sql  0007_comments.sql  0008_canon_change_note.sql  0009_asset_name.sql  0010_asset_exemplar.sql  0011_recipes.sql  0012_jobs.sql  0013_assets_keyset_index.sql  0014_dual_embeddings.sql  0015_accounts_collab_trash.sql  0016_folders.sql  0017_asset_versions.sql  0018_project_members.sql  0019_asset_style_fit.sql
backend/src/: auth.rs  db.rs  edit.rs  error.rs  guardrail.rs  jobs.rs  lib.rs  main.rs  mirror.rs  models.rs  moderation.rs  ratelimit.rs  storage.rs  turnstile.rs  verticals.rs
backend/src/ai/: audio.rs  cache.rs  comfy.rs  dsl.rs  edit.rs  embeddings.rs  images.rs  llm.rs  mod.rs  usage.rs
backend/src/export/: godot.rs  mod.rs  unity.rs
backend/src/routes/: activity.rs  ai.rs  artifacts.rs  assets.rs  audio.rs  auth.rs  canon.rs  collections.rs  comments.rs  context.rs  export.rs  folders.rs  jobs.rs  lineage.rs  mod.rs  project_members.rs  projects.rs  recipes.rs  search.rs  usage.rs  workspaces.rs
backend/tests/: api.rs
deploy/: config.sh  deploy.sh  start-demo.sh  stop-demo.sh
docs/wireframes/: canonforge-project-workspace.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/functions/api/: [[path]].js
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/app/: AccessView.tsx  AppShell.tsx  CreditChip.tsx  HomeRoute.tsx  LandingPage.tsx  ProjectCard.tsx  ProjectWorkspace.tsx  TeamPage.tsx  TrashPage.tsx  WorkspaceHub.tsx  verticals.ts
frontend/src/auth/: AuthContext.tsx  (+2 more)
scripts/: smoke.sh
spikes/canon-consistency/: .gitignore  README.md  canon.json  derivations.json  run.mjs
(+35 files in other folders)
