[package]
name = "design-studio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
axum-extra = { version = "0.9", features = ["cookie"] }
rand = "0.8"
hex = "0.4"
time = "0.3"
tower_governor = "0.4"
governor = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# S3-compatible object storage (AWS S3 / MinIO). rustls (ring) to match the rest
# of the TLS stack; path-style addressing is enabled at runtime for MinIO.
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
base64 = "0.22"
